@@ -1,5 +1,13 @@
 2005-01-16  Ben Maurer  <bmaurer@ximian.com>
 
+	* ProfileReader.cs (ReadCheckpoint, Checkpoint, GetTimelineBefore,
+	GetTimeline): new functions.
+
+	* Profile.cs (GetContextObjsForTime): new func.
+
+	* TypeTabulator.cs: Don't load the context data. Saves shitloads
+	of ram.
+
 	* ProfileReader.cs: Update file format
 
 	* TypeTabulator.cs: cope with changes
